# MarketSense

./: .env.example  .gitignore  Dockerfile.agents  Dockerfile.api  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.analyst.toml  railway.executive.toml  railway.hitl-api.toml  railway.scout.toml  railway.toml  requirements.txt
agents/analyst/: agent.py  tools.py
agents/executive/: agent.py  hitl_api.py  tools.py
agents/scout/: agent.py  scraper.py  tools.py
alembic/: env.py
alembic/versions/: 64726d6e26a8_initial.py
core/: config.py  database.py  llm.py  models.py  schemas.py  seed.py  text.py
scripts/: seed_data.py  trigger_demo.py
