[project]
name = "marketsense-ai"
version = "0.1.0"
description = "MarketSense AI — multi-agent competitive pricing intelligence (Band of Agents Hackathon 2026)"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "band-sdk[langgraph]",
    "langgraph",
    "langchain-openai",
    "openai",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "beautifulsoup4",
    "fastapi",
    "uvicorn[standard]",
    "loguru",
    "tenacity",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "agents"]
